# SFrameRust

./: Cargo.toml  README.md  improvements.md  progress.md  python_api_alignment.md  unbounded_operations_to_fix.md
crates/sframe/: Cargo.toml
crates/sframe-config/: Cargo.toml
crates/sframe-config/src/: lib.rs
crates/sframe-io/: Cargo.toml
crates/sframe-io/src/: cache.rs  cache_fs.rs  hdfs_fs.rs  http_fs.rs  lib.rs  local_fs.rs  s3_fs.rs  vfs.rs
crates/sframe-parquet/: Cargo.toml
crates/sframe-parquet/src/: lib.rs  parquet_reader.rs  parquet_writer.rs  type_mapping.rs
crates/sframe-py/: Cargo.toml  pyproject.toml
crates/sframe-py/sframe/: __init__.py
crates/sframe-py/src/: conversion.rs  error.rs  lib.rs  py_config.rs  py_sarray.rs  py_sframe.rs  py_sketch.rs  py_stream_writer.rs
crates/sframe-py/tests/: test_api_compat.py  test_basic.py
crates/sframe-query/: Cargo.toml
crates/sframe-query/src/: batch.rs  config.rs  execute.rs  lib.rs  nullable_vec.rs  optimizer.rs  planner.rs
crates/sframe-query/src/algorithms/: aggregators.rs  csv_compat_tests.rs  csv_parallel_tokenizer.rs  csv_parser.rs  csv_profile.rs  csv_tokenizer.rs  csv_writer.rs  groupby.rs  hyperloglog.rs  join.rs  json.rs  mod.rs  quantile_sketch.rs  sort.rs  space_saving.rs
crates/sframe-query/src/execute/: batch_iter.rs  broadcast.rs  consumer.rs  filter.rs  mod.rs  parallel.rs  range.rs  rebatch.rs  reduce.rs  source.rs  transform.rs
crates/sframe-storage/: Cargo.toml  FUTURE_WORK.md
crates/sframe-storage/src/: block_decode.rs  block_encode.rs  block_info.rs  codec_float.rs  codec_integer.rs  codec_string.rs  codec_vector.rs  dir_archive.rs  encoded_block_range.rs  index.rs  lib.rs  scatter_writer.rs  segment_reader.rs  segment_writer.rs  sframe_reader.rs  sframe_writer.rs
crates/sframe-storage/tests/: assemble_segments.rs  read_business_sf.rs  roundtrip_write_read.rs
crates/sframe-types/: Cargo.toml
crates/sframe-types/src/: bitset.rs  error.rs  flex_image.rs  flex_type.rs  flex_type_parser.rs  flex_wrappers.rs  lib.rs  serialization.rs  varint.rs
crates/sframe/examples/: benchmark.rs  business_analysis.rs  demo.rs  large_benchmark.rs
crates/sframe/src/: ec_sort.rs  external_sort.rs  join.rs  lib.rs  sarray.rs  sframe.rs
crates/sframe/src/ec_sort/: README.md  invert.rs  mod.rs  permute.rs  scatter.rs
docs/: api-reference.md
docs/plans/: 2026-02-26-phase1-types-io-storage-reader.md  2026-02-26-sframe-rust-port-design.md  2026-03-03-improvements-design.md  2026-03-03-improvements-implementation.md  2026-03-03-parallel-csv-tokenizer-design.md  2026-03-03-parallel-csv-tokenizer.md  2026-03-04-block-level-source-design.md  2026-03-04-block-level-source.md  2026-03-04-compile-stream-cleanup-design.md  2026-03-04-compile-stream-cleanup.md  2026-03-04-parallel-execution-design.md  2026-03-04-parallel-execution-plan.md  2026-03-05-parquet-impl-plan.md  2026-03-05-parquet-support-design.md  2026-03-07-ec-sort-design.md  2026-03-07-ec-sort-impl.md  PLAN.md
samples/: business.csv
samples/business.sf/: dir_archive.ini  m_9688d6320ff94822.0000  m_9688d6320ff94822.frame_idx  m_9688d6320ff94822.sidx
