[package]
name = "sframe-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_sframe"
crate-type = ["cdylib"]

[dependencies]
sframe_core = { path = "../sframe", package = "sframe" }
sframe-types = { path = "../sframe-types" }
sframe-query = { path = "../sframe-query" }
pyo3 = { version = "0.28", features = ["extension-module"] }
