[package]
name = "sframe-query"
version = "0.1.0"
edition = "2021"

[dependencies]
sframe-types = { path = "../sframe-types" }
sframe-storage = { path = "../sframe-storage" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
pin-project-lite = "0.2"
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"
