[package]
name = "sframe-query"
version = "0.1.0"
edition = "2021"

[dependencies]
sframe-types = { path = "../sframe-types" }
sframe-storage = { path = "../sframe-storage" }
sframe-io = { path = "../sframe-io" }
sframe-config = { path = "../sframe-config" }
genawaiter = { version = "0.99.1", default-features = false }
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
