[package]
name = "sframe-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sframe-types = { path = "../sframe-types" }
sframe-io = { path = "../sframe-io" }
lz4_flex = "0.11"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
genawaiter = { version = "0.99.1", default-features = false }

[dev-dependencies]
csv = "1"
tempfile = "3"
