[package]
name = "sframe"
version = "0.1.0"
edition = "2021"

[dependencies]
sframe-types = { path = "../sframe-types" }
sframe-io = { path = "../sframe-io" }
sframe-storage = { path = "../sframe-storage" }
sframe-query = { path = "../sframe-query" }
sframe-config = { path = "../sframe-config" }
sframe-parquet = { path = "../sframe-parquet" }
rayon = "1.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"
arrow = "58"
parquet = { version = "58", features = ["arrow", "snap"] }
